--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.8.21",
     "jgallery": "^2.2.0",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dotdotdot": "^1.3.1",
