--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
