--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jgallery": "^2.2.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.1",
+    "query-string": "^6.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dotdotdot": "^1.3.1",
