--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
+    "images": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
     "rimraf": "^3.0.2"
