--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
+    "fluent-ffmpeg": "^2.1.2",
     "images": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
